# HDMI-MIX

./: .gitignore  CMakeLists.txt  Makefile  README.md  dma.hpp  drm.cpp  drm.hpp  egl_renderer.hpp  hdmimix.cpp  helper.hpp  imgui_main.cpp  v4l2.cpp  v4l2.hpp
backends/: imgui_impl_pass_through.cpp  imgui_impl_pass_through.h
hdmimix/: drm.cpp  egl_renderer.hpp  hdmimix.cpp  helper.hpp  imgui_main.cpp  v4l2.cpp  v4l2.hpp
systemd/system/: hdmirx-audio.service  hdmirx-video.service
udev/rules.d/: 40-hdmirx.rules
utils/: image_utils.c
yolo/: postprocess.cpp  postprocess.h  yolo11.cpp  yolo_main.cpp
